kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library-management-system
  namespace: library-management-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: library-management-system
  template:
    metadata:
      labels:
        app: library-management-system
    spec:
      containers:
        - name: library-management-system
          image: ivanovn7/library-management-system:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
